orden general 01, borrada de fotos al pepe, clases, etc

--- a/index.html
+++ b/index.html
@@ -70,36 +70,42 @@
       <br>
       <aside> 
         <div>
-          <p>Auspiciada por:</p>
-          <img class="logo-intro" src="./img/gibson-logo.png" alt="logo-de-gibson">
-          <img class="logo-intro" src="./img/fender-logo.png" alt="logo-de-fender">
-          <img class="logo-intro" src="./img/marshall-logo.png" alt="logo-de-marshall">
+          <div>
+            <p class="a-mano">Auspiciada por:</p>
+          </div>
+          <div>
+            <img class="logo-intro" src="./img/gibson-logo.png" alt="logo-de-gibson">
+            <img class="logo-intro" src="./img/fender-logo.png" alt="logo-de-fender">
+            <img class="logo-intro" src="./img/marshall-logo.png" alt="logo-de-marshall">
+          </div>
         </div>
       </aside>
-      <!-- Vinilo --- Elemento Bootstrap -->
-      <section class="container mt-4 mb-5">
-        <h2 class="h2-home">Escuchá nuestro nuevo disco en tu plataforma favorita 👇</h2>
-        <div>
-          <img id="ancho-img" src="./img/Disco-en-vivo.png" alt="Vinilo del nuevo album de la banda">
-        </div>
-        <div id="columna">
-          <ul>               
-            <li>           
-              <a class="btn-buy" href="https://open.spotify.com/playlist/1Pg7XyZZPyNksMzQaFZgnG?si=ad144626d60145fc" target="_blank">Spotify<a>       
-            </li>        
-            <li>           
-              <a class="btn-buy" href="https://music.apple.com/us/album/frente-a-frente/274722567" target="_blank">Apple Music<a>         
-            </li>        
-            <li>           
-              <a class="btn-buy" href="https://music.amazon.com/albums/B0014JJ0YI" target="_blank">Amazon Music            </a>         
-            </li>        
-            <li>           
-              <a class="btn-buy" href="https://www.youtube.com/user/TocoyObligo/videos" target="_blank">Youtube</a>        
-            </li>      
-          </ul>
+      <!-- Vinilo -->
+      <h2 class="h2-home">Escuchá nuestro nuevo disco en tu plataforma favorita 👇</h2>
+      <section class="container mt-4 mb-5">  
+        <div class="row justify-content-around">
+          <div class="col-md-6">
+            <img id="ancho-img" src="./img/Disco-en-vivo.png" alt="Vinilo del nuevo album de la banda">
+          </div>
+          <div class="col-md-6 d-flex nowrap justify-content-center align-items-center" id="columna">
+            <ul>               
+              <li class="row">           
+                <a class="btn-buy" href="https://open.spotify.com/playlist/1Pg7XyZZPyNksMzQaFZgnG?si=ad144626d60145fc" target="_blank">Spotify<a>       
+              </li>        
+              <li class="row">           
+                <a class="btn-buy" href="https://music.apple.com/us/album/frente-a-frente/274722567" target="_blank">Apple Music<a>         
+              </li>        
+              <li class="row">           
+                <a class="btn-buy" href="https://music.amazon.com/albums/B0014JJ0YI" target="_blank">Amazon Music            </a>         
+              </li>        
+              <li class="row">           
+                <a class="btn-buy" href="https://www.youtube.com/user/TocoyObligo/videos" target="_blank">Youtube</a>        
+              </li>      
+            </ul>
+          </div>
         </div>
       </section> 
-      <!-- Bloque de Texto  --- Elemento Bootstrap --> 
+      <!-- Bloque de Texto --> 
       <article class="container mb-5">
         <h2>En la ruta nuevamente</h2>
         <p>Luego de 2 años de parate debido a la pandemia, tenemos todo listo para salir a realizar una gira completa (de 4 meses) por todo el país. La idea principal es volver a conectarnos a través de la música que tanto nos gusta. Realizaremos clásicos de La Trampa (banda a la que supimos hacerle tributo por muchos años) y, a su vez, tocaremos algunas canciones de nuestro nuevo álbum. <br><br> Prepará la garganta, porque se vienen toques cargaditos y largos, de 2 horas y media de duración. 
@@ -108,7 +114,7 @@
     </main>
     <!-- Pie de página -->
     <footer>
-      <!--- Elementos SIN Bootstrap --->
+      <!--- Elementos GRID --->
       <p id="made">De Uruguay al mundo 🤘🏻</p>
       <span id="contrata">Por contrataciones podes escribirnos a: <br><br> <a class="btn-cta" href="mailto:tocoyobligo@gmail.com" target="_blank">tocoyobligo@gmail.com</a></span>
       <div id="redes">
