--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -55,7 +55,7 @@
                 <div class="carousel-item active">
                     <img src="../img/banner-01.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
                     <div class="container">
-                        <div id="div-hero" class="carousel-caption">
+                        <div class="carousel-caption text-center">
                             <h1 class="h1-pages">BIO</h1>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
@@ -68,32 +68,32 @@
                 </div>
             </div>
             <!-- Integrantes --- Elemento Bootstrap --> 
-            <section>
+            <section class="mt-2">
                 <h2>Integrantes de toco y obligo</h2>
                 <div class="row mt-4 mb-3 justify-content-around">
                     <div class="card mb-4" style="width: 18rem;">
-                        <img src="../img/3.jpg" class="card-img-top rounded" alt="foto del cantante">
+                        <img src="../img/card-1.jpg" class="card-img-top rounded" alt="foto del cantante">
                         <div class="card-body">
                             <h4>Maxi</h4>
                             <p class="card-text">Miembro fundador con una voz fuerte y dentro del registro de Alejandro Spuntone, lo que nos facilitó la tarea a la hora de querer realizar las piezas más complejas de la banda. Siempre saltando y con una sonrisa.</p>
                         </div>
                     </div>
                     <div class="card mb-4" style="width: 18rem;">
-                        <img src="../img/1.jpg" class="card-img-top rounded" alt="foto del guitarrista">
+                        <img src="../img/card-2.jpg" class="card-img-top rounded" alt="foto del guitarrista">
                         <div class="card-body">
                             <h4>Marce</h4>
                             <p class="card-text">Miembro fundador con un sonido crudo y potente que combina estilos que van desde el rock clásico, al hard rock y el metal. Veloz y dinámico. Muchos dicen que no tiene una guitarra, sino una "metralleta".</p>
                         </div>
                     </div>
                     <div class="card mb-4" style="width: 18rem;">
-                        <img src="../img/2.jpg" class="card-img-top rounded" alt="foto del baterista">
+                        <img src="../img/card-3.jpg" class="card-img-top rounded" alt="foto del baterista">
                         <div class="card-body">
                             <h4>Gonza</h4>
                             <p class="card-text">Baterista que se hace notar ya que le saca hasta el último decibel que pueda a su hermoso instrumento. Su llegada a la banda (2015) le aporto un componente de mayor potencia a todos los shows.</p>
                         </div>
                     </div>
                     <div class="card mb-4" style="width: 18rem;">
-                        <img src="../img/4.jpg" class="card-img-top rounded" alt="foto del bajista">
+                        <img src="../img/card-4.jpg" class="card-img-top rounded" alt="foto del bajista">
                         <div class="card-body">
                             <h4>Mati</h4>
                             <p class="card-text">Desde 2014 Mati aporta esa base necesaria para que el show pueda comenzar y terminar fluyendo. Dicen que sin bajo, no hay banda, y esta no es la excepción. Acertivo y con un tono bien definido.</p>
@@ -114,16 +114,17 @@
                 </div>
             </section>
             <!-- Texto y videos  --- Elemento Bootstrap --> 
-            <article class="container">
+            <article class="container mt-5">
                 <h2>El festejo de 3 años</h2>
                 <p>A lo largo de nuestra (aún corta) vida, tuvimos varios puntos altos que nos hicieron avanzar muchos escalones: salir rápidamente del under, conseguir contrato discográfico, etc. Si tuviéramos que elegir uno para contarte, sin dudas es el toque donde celebramos los 3 años de vida de la banda.<br><br> Aún siendo solamente una banda tributo, logramos, por primera vez, llenar una sala mítica del país (con capacidad para 700 personas). ¡Algo pocas veces visto para una banda de tan pocos años! No solo agotamos entradas antes, sino que también logramos que los dueños de ese recinto —conocidos por ser medio tacaños— nos ofrecieran más porcentaje de ganancias y el cierre de 2 fechas más, una para el siguiente día y otra para la siguiente semana. También las agotamos.<br><br>
-                    Te dejamos un par de videos para que dimensiones lo que fue y por qué fue tan increíble e importante para nosotros.<br><br></p>
+                    Te dejamos un par de videos para que dimensiones lo que fue y por qué fue tan increíble e importante para nosotros.<br><br>
+                </p>
                 <div class="row mt-4 mb-5 justify-content-around">
                     <div class="card" style="width: 25rem;">
-                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/uvOYRM-HEfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/9P656mcGL80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card" style="width: 25rem">
-                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/pDt9GtoOtG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/EUVMWbBs3Do" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <p>Cada grito de esa noche quedó grabado en nuestra memoria para siempre. Tras ese mes de agosto de 2016, la banda logró despegar y conseguir su primera oferta para la grabación de un disco.</p>
@@ -131,10 +132,10 @@
             <!-- Texto Normal --> 
             <article class="container">
                 <h2>Discografía</h2>
-                <p>Si bien la banda tiene 10 años, la verdad es que se ha dedicado —por sobre todas las cosas— a tocar en vivo y llevar nuestra música (así como temas de La Trampa en calidad de tributo) a todos las ciudades del país que nos fuera posible. Nuestra discografía, chica pero contundente, es la siguiente: </p>
+                <p>Si bien la banda tiene 10 años, la verdad es que se ha dedicado —por sobre todas las cosas— a tocar en vivo y llevar nuestra música (así como temas de La Trampa en calidad de tributo) a todos las ciudades del país que nos fuera posible. <br><br>Nuestra discografía, chica pero contundente, es la siguiente: </p>
             </article>
             <!-- Tabla --- Elemento Bootstrap -->  
-            <section class="container mt-5 mb-5">
+            <article class="container">
                 <table class="table">
                     <thead class="table-light">
                         <tr>
@@ -159,11 +160,11 @@
                         </tr>
                     </tbody>
                 </table>
-            </section>
+            </article>
         </main>
         <!-- Pie de página -->
         <footer>
-            <!--- Elementos SIN Bootstrap --->
+            <!--- Elemento GRID --->
             <p id="made">De Uruguay al mundo 🤘🏻</p>
             <span id="contrata">Por contrataciones podes escribirnos a: <br><br> <a class="btn-cta" href="mailto:tocoyobligo@gmail.com" target="_blank">tocoyobligo@gmail.com</a></span>
             <div id="redes">
