--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
         </header>
         <!--Bloque principal-->
         <main>
-            <!-- Hero-Section --- Elemento Bootstrap -->
+            <!-- Banner --- Elemento Bootstrap -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../img/banner-03.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
@@ -68,8 +68,8 @@
                 </div>
             </div>
             <!-- Formulario --- Elemento Bootstrap --> 
-            <section class="content">
-                <h2 class="h2-pages">Si querés dejarnos un mensaje, <br> es por acá 👇🏻</h2>
+            <section class="content mt-3">
+                <h2>Si querés dejarnos un mensaje, <br> es por acá 👇🏻</h2>
                 <div class="row justify-content-center mb-5 mx-4">
                     <article class="col-md-7 bg-form">
                         <form class="container">
@@ -112,7 +112,7 @@
                                 </div>
                                 <br>
                                 <div class="col-5">
-                                    <label for="inputAddress" class="form-label">Si respuesta es sí, pon aquí tu dirección</label>
+                                    <label for="inputAddress" class="form-label">Si respuesta es sí, poné acá tu dirección</label>
                                     <input type="text" class="form-control" id="inputAddress" placeholder="Ejm: Av. Florida 1223">
                                 </div>
                             </div>
