--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -50,93 +50,90 @@
       </header>
       <!--Bloque principal-->
       <main>
-          <!-- Hero-Section --- Elemento Bootstrap -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../img/banner-04.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
-              <div class="container">
-                <div class="carousel-caption text-center">
-                  <h1 class="h1-pages">FOTOS</h1>
-                  <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item active"><a href="../index.html">Inicio</a></li>
-                      <li class="breadcrumb-item">FOTOS</li>
-                    </ol>
-                  </nav>
-                </div>
+        <!-- Banner --- Elemento Bootstrap -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/banner-04.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
+            <div class="container">
+              <div class="carousel-caption text-center">
+                <h1 class="h1-pages">FOTOS</h1>
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item active"><a href="../index.html">Inicio</a></li>
+                    <li class="breadcrumb-item">FOTOS</li>
+                  </ol>
+                </nav>
               </div>
             </div>
           </div>
-          <!-- Fotos de toques anteriores --- Elemento Bootstrap -->  
-          <section>
-            <!-- Toque 01 -->
-            <article id="galeria" class="container">
-              <h2>Toques en vivo de toco y obligo</h2>
-              <div class="text-align">
-                <h3>Show 01 - Septiembre 2016</h3>
+        </div>
+        <!-- Fotos de toques anteriores --- Elemento Bootstrap -->  
+        <section>
+          <!-- Toque 01 -->
+          <article class="container mt-3">
+            <h2>Toques en vivo de toco y obligo</h2> 
+            <h3>Show 01 - Septiembre 2016</h3>
+            <div class="row">
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/show-01-cantante.jpeg" alt="cantante en show 1">
               </div>
-              <div class="row">
-                <div class="col-lg-3">
-                  <img class="cada-foto" src="../img/cantante_show_01.jpeg" alt="cantante_show_01">
-                </div>
-                <div class="col-lg-3">
-                  <img class="cada-foto" src="../img/guitarrista_show_01.jpg" alt="guitarrista_show_01">
-                </div>
-                <div class="col-lg-3">
-                  <img class="cada-foto" src="../img/banda_show_01.jpeg" alt="banda_show_01">
-                </div>
-                <div class="col-lg-3">
-                  <img class="cada-foto" src="../img/bajista_show_01.jpeg" alt="bajista_show_01">
-                </div>          
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/show-01-guitarrista.jpg" alt="guitarrista en show 1">
               </div>
-              <p class="acceso-albumes">Accedé al album completo haciendo clic <a class="btn-wp" href="https://www.facebook.com/media/set/?set=a.631138950250034&type=3" target="_blank">aquí</a> 👈</p>
-            </article>
-            <!-- Toque 02 -->
-            <article id="galeria" class="container">
-                <div class="text-align">
-                  <h3>Show 02 - Marzo 2017</h3>
-                </div>
-                <div class="row">
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/10.jpg" alt="banda tocando 01">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/11.jpg" alt="banda tocando 02">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/12.jpg" alt="banda con la gente al final del show">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/13.jpg" alt="banda saludando desde el escenario">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/14.jpg" alt="banda tocando 03">
-                  </div>        
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/6.jpg" alt="banda tocando 04">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/7.jpg" alt="marcelo y maxi tocando juntos">
-                  </div>
-                  <div class="col-lg-3">
-                    <img class="cada-foto" src="../img/9.jpg" alt="gente gritando desde abajo del escenario">
-                  </div>         
-                </div>
-                <p class="acceso-albumes">Accedé al album completo haciendo clic <a class="btn-wp" href="https://www.facebook.com/TocoyObligo/photos_of" target="_blank">aquí</a> 👈</p>
-              </article>
-          </section>
-          <!-- Fotógrafos -->
-          <section class="container"> 
-            <h2>Todos nuestros fotográfos son amigos de la casa y podes ver si trabajo haciendo clic en sus nombres 👇</h2>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/show-01-banda.jpeg" alt="banda tocando en show 1">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/show-01-bajista.jpeg" alt="bajista en show 1">
+              </div>          
+            </div>
+            <p class="acceso-albumes">Accedé al album completo haciendo clic <a class="btn-wp" href="https://www.facebook.com/media/set/?set=a.631138950250034&type=3" target="_blank">acá</a> 👈</p>
+          </article>
+          <!-- Toque 02 -->
+          <article class="container">
+            <h3>Show 02 - Marzo 2017</h3>
+            <div class="row">
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/10.jpg" alt="banda tocando 01">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/11.jpg" alt="banda tocando 02">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/12.jpg" alt="banda con la gente al final del show">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/13.jpg" alt="banda saludando desde el escenario">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/14.jpg" alt="banda tocando 03">
+              </div>        
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/6.jpg" alt="banda tocando 04">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/7.jpg" alt="marcelo y maxi tocando juntos">
+              </div>
+              <div class="col-lg-3">
+                <img class="cada-foto" src="../img/9.jpg" alt="gente gritando desde abajo del escenario">
+              </div>         
+            </div>
+            <p class="acceso-albumes">Accedé al album completo haciendo clic <a class="btn-wp" href="https://www.facebook.com/TocoyObligo/photos_of" target="_blank">acá</a> 👈</p>
+          </article>
+        </section>
+        <!-- Fotógrafos -->
+        <section class="container mb-5"> 
+          <h2>Todos nuestros fotográfos son amigos de la casa y podes ver si trabajo haciendo clic en sus nombres 👇</h2>
+          <div class="d-flex justify-content-around">
             <a class="btn-wp" href="https://www.instagram.com/f_p_s/?fbclid=IwAR3A2xu6I1SC--Xk98CNv4c2sie4YLpV-wPlsb9zbjAbA8ximNuhteA7lR0" target="_blank"><p>Francisco</p></a>
             <a class="btn-wp" href="https://www.facebook.com/PHLauraRucco" target="_blank"><p>Laura</p></a>            
             <a class="btn-wp" href="https://www.facebook.com/MathiasArizagafotografo" target="_blank"><p>Matías</p></a>          
-          </section>
-          <br><br><br>
+          </div>
+        </section>
       </main>
       <!--Pie de página-->
       <footer>
-        <!--- Elementos SIN Bootstrap --->
+        <!--- Elemento GRID --->
         <p id="made">De Uruguay al mundo 🤘🏻</p>
         <span id="contrata">Por contrataciones podes escribirnos a: <br><br> <a class="btn-cta" href="mailto:tocoyobligo@gmail.com" target="_blank">tocoyobligo@gmail.com</a></span>
         <div id="redes">
@@ -149,7 +146,7 @@
       <!-- Scripts -->
       <!-- JavaScript Bundle with Popper -->
       <script 
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">        
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">        
       </script>
   </body>
 </html>
