--- a/pages/shows.html
+++ b/pages/shows.html
@@ -15,113 +15,111 @@
       <title>toco y obligo - SHOWS y FECHAS</title>
   </head>
   <body>
-      <!--Encabezado-->
-      <header>
-        <!-- Barra de menú --- Elemento Bootstrap -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container">
-            <a class="navbar-brand" href="../index.html"><img src="../img/logo-toco-y-obligo-ts.png" alt="logo-de-banda"></a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="toggler-icon top-bar"></span>
-              <span class="toggler-icon middle-bar"></span>
-              <span class="toggler-icon bottom-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/pages/biografia.html">Biografía</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="/pages/shows.html">Shows</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/pages/fotos.html">Fotos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
-                </li>
-              </ul>
+    <!--Encabezado-->
+    <header>
+      <!-- Barra de menú --- Elemento Bootstrap -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="../index.html"><img src="../img/logo-toco-y-obligo-ts.png" alt="logo-de-banda"></a>
+          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/pages/shows.html">Shows</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/fotos.html">Fotos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Bloque principal -->
+    <main>
+      <!-- Banner --- Elemento Bootstrap -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/banner-02.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
+          <div class="container-fluid">
+            <div class="carousel-caption">
+              <h1 class="h1-pages">SHOWS</h1>
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active"><a href="../index.html">Inicio</a></li>
+                  <li class="breadcrumb-item">SHOWS</li>
+                </ol>
+              </nav>
             </div>
           </div>
-        </nav>
-      </header>
-      <!-- Bloque principal -->
-      <main>
-          <!-- Banner --- Elemento Bootstrap -->
-          <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img src="../img/banner-02.jpg" class="bd-placeholder-img" alt="Imagen de presentación de la banda">
-                  <div class="container-fluid">
-                      <div class="carousel-caption">
-                        <h1 class="h1-pages">SHOWS</h1>
-                        <nav aria-label="breadcrumb">
-                          <ol class="breadcrumb">
-                            <li class="breadcrumb-item active"><a href="../index.html">Inicio</a></li>
-                            <li class="breadcrumb-item">SHOWS</li>
-                          </ol>
-                        </nav>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <!-- Próximos Shows --> 
-          <article class="container">
-            <h2>Fechas de shows</h2>
-            <p id="efecto-p">No hay toques agendados para los próximos 2 meses, pero si querés saber cuando comienza <br>nuestra próxima gira hacé <a class="btn-wp" href="#ancla-gira">clic acá.</a></p>
-          </article>
-          <!-- Videos de toques anteriores --- Elemento Bootstrap --> 
-          <article class="container">  
-              <h2>Para matar la espera</h2>
-              <p class="p-center">Te dejamos algunos de nuestros mejores registros de toques. 👇</p>
-              <div class="row mt-4 mb-3 justify-content-around">
-                <div class="card mb-4" style="width: 25rem;">
-                  <iframe width="100%" height="225" src="https://www.youtube.com/embed/uvOYRM-HEfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="card mb-4" style="width: 25rem">
-                  <iframe width="100%" height="225" src="https://www.youtube.com/embed/pDt9GtoOtG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="card mb-4" style="width: 25rem">
-                  <iframe width="100%" height="225" src="https://www.youtube.com/embed/V3WjtKsQavM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="card mb-4" style="width: 25rem;">
-                  <iframe width="100%" height="225" src="https://www.youtube.com/embed/ZlPbAzzn9Mo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="card mb-4" style="width: 25rem">
-                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/H-Pdq1CqjiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="card mb-4" style="width: 25rem">
-                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/ZZPnp4Lhy-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-              </div>
-            </article>
-            <a name="ancla-gira"></a>
-            <!-- Bloque de Texto -->
-            <article class="container mb-5">
-              <h2>Nuestra próxima gira</h2>
-              <p>Estamos a solo unos meses de comenzar nuestra gira, y mientras seguimos preparando lo que va a ser nuestro escenario, aún continuamos cerrando nuevas fechas. Comenzaremos en febrero de 2023 y terminaremos en octubre, para dejar un mes de descanso antes del cierre del año en la capital del país.🤘😎<br><br>Se vienen lindas sorpresas y lindas fechas. Lo único que podemos adelantarte es que si sos de la ciudad de Canelones (más precisamente de Las Piedras) vayas preparando las banderas para el día 4 de febrero. 😉 Además de estar celebrando el comienzo de una de las giras más largas que hicimos hasta el momento, ese día es el cumpleaños de nuestro baterías (el Gonza), por lo que podés llevar cosas para tirarle (sostenes, calzones, etc. jaja), luego todos le cantamos el Feliz Cumpleaños.</p>
-              <br>
-              <p>También recordá que podés unirte a nuestro grupo exclusivo de WhatsApp haciendo <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">clic acá.</a><br><br> Allí compartimos toda la información día a día de cómo van los avances, los preparativos y los ensayos. Además, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos. <br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor! Te vemos y leemos dentro del grupo de WhatsApp.</p>
-            </article>
-      </main>
-      <!--Pie de página-->
-      <footer>
-        <!--- Elementos SIN Bootstrap --->
-        <p id="made">De Uruguay al mundo 🤘🏻</p>
-        <span id="contrata">Por contrataciones podes escribirnos a: <br><br> <a class="btn-cta" href="mailto:tocoyobligo@gmail.com" target="_blank">tocoyobligo@gmail.com</a></span>
-        <div id="redes">
-            <a href="https://Youtube.com" target="_blank"><i class="bi bi-youtube"></i></a>
-            <a href="https://Spotify.com" target="_blank"><i class="bi bi-spotify"></i></a>
-            <a href="https://Instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
-            <a href="https://Twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
         </div>
-      </footer>
-      <!-- Scripts -->
-      <!-- JavaScript Bundle with Popper -->
-      <script 
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">        
-      </script>
+      </div>
+      <!-- Próximos Shows --> 
+      <article class="container mt-3">
+        <h2>Fechas de shows</h2>
+        <p id="efecto-p">No hay toques agendados para los próximos 2 meses, pero si querés saber cuando comienza <br>nuestra próxima gira hacé <a class="btn-wp" href="#ancla-gira">clic acá.</a></p>
+      </article>
+      <!-- Videos de toques anteriores --- Elemento Bootstrap --> 
+      <article class="container">  
+        <h2>Para matar la espera</h2>
+        <p class="p-center">Te dejamos algunos de nuestros mejores registros de toques. 👇</p>
+        <div class="row mt-4 mb-3 justify-content-around">
+          <div class="card mb-4" style="width: 25rem;">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/uvOYRM-HEfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card mb-4" style="width: 25rem">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/pDt9GtoOtG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card mb-4" style="width: 25rem">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/V3WjtKsQavM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card mb-4" style="width: 25rem;">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/ZlPbAzzn9Mo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card mb-4" style="width: 25rem">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/H-Pdq1CqjiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card mb-4" style="width: 25rem">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/ZZPnp4Lhy-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </article>
+      <a name="ancla-gira"></a>
+      <!-- Bloque de Texto -->
+      <article class="container mb-5">
+        <h2>Nuestra próxima gira</h2>
+        <p>Estamos a solo unos meses de comenzar nuestra gira, y mientras seguimos preparando lo que va a ser nuestro escenario, aún continuamos cerrando nuevas fechas. Comenzaremos en febrero de 2023 y terminaremos en octubre, para dejar un mes de descanso antes del cierre del año en la capital del país.🤘😎<br><br>Se vienen lindas sorpresas y lindas fechas. Lo único que podemos adelantarte es que si sos de la ciudad de Canelones (más precisamente de Las Piedras) vayas preparando las banderas para el día 4 de febrero. 😉 Además de estar celebrando el comienzo de una de las giras más largas que hicimos hasta el momento, ese día es el cumpleaños de nuestro baterías (el Gonza), por lo que podés llevar cosas para tirarle (sostenes, calzones, etc. jaja), luego todos le cantamos el Feliz Cumpleaños.<br><br>También recordá que podés unirte a nuestro grupo exclusivo de WhatsApp haciendo <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">clic acá.</a><br><br> Allí compartimos toda la información día a día de cómo van los avances, los preparativos y los ensayos. Además, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos. <br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor! Te vemos y leemos dentro del grupo de WhatsApp.</p>
+      </article>
+    </main>
+    <!--Pie de página-->
+    <footer>
+      <!--- Elemento GRID --->
+      <p id="made">De Uruguay al mundo 🤘🏻</p>
+      <span id="contrata">Por contrataciones podes escribirnos a: <br><br> <a class="btn-cta" href="mailto:tocoyobligo@gmail.com" target="_blank">tocoyobligo@gmail.com</a></span>
+      <div id="redes">
+        <a href="https://Youtube.com" target="_blank"><i class="bi bi-youtube"></i></a>
+        <a href="https://Spotify.com" target="_blank"><i class="bi bi-spotify"></i></a>
+        <a href="https://Instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://Twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+      </div>
+    </footer>
+    <!-- Scripts -->
+    <!-- JavaScript Bundle with Popper -->
+    <script 
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">        
+    </script>
   </body>
 </html>
