--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -132,7 +132,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="1" name="respuesta" id="acepta">
                                 <label class="form-check-label" for="acepta">
-                                Check si queres suscribirte a nuestra Newsletter
+                                Check si querés suscribirte a nuestra Newsletter
                                 </label>
                             </div>
                             <br>
